--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,177 @@
-// Place all the styles related to the pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: lighter;
+}
+
+h1, h2 {
+  color: #404042;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: normal;
+}
+
+h2, h3 {
+  font-family: 'Open Sans', sans-serif;
+
+}
+
+p {
+  color: #404042;
+  /*opacity: .7;*/
+  font-family: 'Open Sans', sans-serif;
+  font-weight: normal;
+}
+
+/*.png {
+  width: 175px;
+}*/
+/*img {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+}
+a {
+  color: #1A48E3;
+  font-weight: bold;
+  text-decoration: none;
+  transition: .3s;
+}
+a:hover {
+  color: #CE2FAE;
+}*/
+
+.container {
+  width: 1000px;
+  margin: auto;
+}
+
+.banner {
+  /*background-color: #98c0c8;
+  98c0c8*/
+  background: linear-gradient(#4c99aa, #98c0c8);
+
+  /*background-image: url('images/vr.jpg');*/
+  /*opacity: .9;*/
+  background-size: cover;
+  background-position: center;
+  padding: 80px 0;
+  text-align: center;
+  padding-top: 30px;
+
+}
+
+.banner h1 {
+  color: transparent;
+  -webkit-text-stroke: 2px white;
+  fill: transparent;
+  /*stroke-width: 1;*/
+  /*opacity: .8;*/
+  text-transform: uppercase;
+  font-size: 90px;
+  letter-spacing: .3em;
+  line-height: 42px;
+  /*display: block;*/
+
+}
+
+.banner p {
+  opacity: .7;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 30px;
+
+}
+
+.png {
+  width: 200px;
+}
+
+.banner p {
+  color: white;
+  font-size: 20px;
+}
+
+body {
+  margin: 0;
+}
+
+.btn {
+  /*bottom: 60px;
+    left: 50%;*/
+    transform: translateX(-50%);
+    border: 1px solid #fff;
+    color: #fff;
+    border-radius: 50px;
+    padding: 1em 2em;
+    transition-property: color;
+    /*overflow: hidden;*/
+    text-decoration: none;
+    transition: .3s;
+    margin-top: 10px;
+}
+
+.btn:hover {
+  opacity: .7;
+  color: white;
+
+}
+
+
+.card {
+  background: white;
+  box-shadow: 0 0 16px rgba(0,0,0,0.1);
+  border-radius: 4px;
+  width: 200px;
+  text-align: center;
+  padding: 24px;
+  margin: 9px;
+  flex-grow: 1;
+}
+
+
+.card img {
+  /*width: 170px;*/
+  height: 180px;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
+.card h3 {
+  margin-bottom: 0;
+}
+
+.footer {
+  background: #98c0c8;
+  /*background: linear-gradient(#98c0c8, #69A8B6);*/
+  text-align: center;
+  padding: 24px 0;
+}
+
+.footer p {
+  color: white;
+}
+
+.cards {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding-bottom: 24px;
+}
+
+@media (min-width: 500px) {
+  .container {
+    width: 400px;
+  }
+}
+
+
+@media (min-width: 800px) {
+  .container {
+    width: 600px;
+  }
+}
+
+@media (min-width: 1000px) {
+  .container {
+    width: 800px;
+  }
+}
