--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -16,7 +16,7 @@
   <div class="banner">
 
     <h1>awareness vr</h1>
-    <p>Guided meditation applied to every-day situations</p>
+    <p>Applying meditation to every-day situations</p>
     <br>
     <!-- <img src="/app/assets/images/meditate 2.png" class="png" alt=""> -->
     <%= image_tag "meditate2.png" %>
@@ -29,26 +29,26 @@
   </div>
 
   <div class="container">
-    <h2>What we do</h2>
+    <h2>What the app does:</h2>
     <!-- Cards container -->
     <div class="cards">
 
       <!-- Shanghai card -->
       <div class="card">
         <%= image_tag "sunrise 2.png" %>
-        <p>Our apps provide a focused, immersive environment to enhance learning</p>
+        <p>Creates a focused, immersive environment to provide enhanced learning</p>
       </div>
 
       <!-- London card -->
       <div class="card">
         <%= image_tag "cityscape 2.png" %>
-        <p>Guided courses simulate real-life situations in order to use the skills in every-day life </p>
+        <p>Pairs guided meditations with real-life simulations to apply the practice to every-day life </p>
       </div>
 
       <!-- Paris card -->
       <div class="card">
         <%= image_tag "Group 6.png" %>
-        <p>We connect you to other users to discuss experiences</p>
+        <p>Creates groups of users to discuss and learn from each other </p>
       </div>
     </div>
   </div>
@@ -57,7 +57,7 @@
   <!-- Footer section -->
   <div class="footer">
     <div class="container">
-      <p>❤️</p>
+      <p>✌️      👌      🤟</p>
     </div>
   </div>
 
